--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/ChadLefort/pat-bot.git",
   "author": "Chad Lefort",
   "keywords": [
-    "discord", "bot"
+    "discord",
+    "bot"
   ],
   "files": [
     "lib"
@@ -17,14 +18,24 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "@types/bluebird": "^3.0.33",
+    "@types/chalk": "^0.4.30",
     "@types/dotenv": "^2.0.18",
     "@types/glob": "^5.0.30",
     "@types/lodash": "^4.14.36",
     "@types/node": "6.0.31",
+    "@types/request": "0.0.31",
+    "@types/request-promise": "^3.0.32",
+    "@types/winston": "0.0.28",
+    "bluebird": "^3.4.6",
+    "chalk": "^1.1.3",
     "discord.js": "^9.3.0",
     "dotenv": "^2.0.0",
     "glob": "^7.1.0",
-    "lodash": "^4.16.2"
+    "lodash": "^4.16.2",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "@types/chai": "3.4.30",
@@ -35,6 +46,7 @@
     "gulp": "^3.9.0",
     "gulp-help": "^1.6.0",
     "gulp-mocha": "^3.0.0",
+    "gulp-nodemon": "^2.2.0",
     "gulp-tslint": "^6.0",
     "ts-node": "^1.2.2",
     "tslint": "3.14.0-dev.1",
