--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
-    "deploy": "npm run clean && echo Using TypeScript && tsc --version && tsc --pretty",
+    "deploy": "npm run clean && ./node_modules/.bin/tsc --pretty",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
