--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
-    "deploy": "npm run clean && ./node_modules/.bin/tsc --pretty",
+    "deploy": "npm run clean && tsc --pretty",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
@@ -40,16 +40,16 @@
     "lodash": "^4.16.2",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
-    "winston": "^2.2.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "typescript": "2.0.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "@types/chai": "3.4.30",
     "@types/mocha": "2.2.29",
     "chai": "3.5.0",
     "ts-node": "^1.2.2",
-    "tslint": "3.14.0-dev.1",
-    "typescript": "2.0.0"
+    "tslint": "3.14.0-dev.1"
   },
   "engines": {
     "node": ">=6.0.0"
