--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
+    "start": "node lib/index.js",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
-  "start": "node lib/index.js",
   "dependencies": {
     "@types/bluebird": "^3.0.33",
     "@types/dotenv": "^2.0.18",
@@ -52,6 +52,6 @@
     "tslint": "3.14.0-dev.1"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": "6.7.0"
   }
 }
