--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pat-bot",
   "version": "0.0.1",
-  "description": "A silly discord bot.",
+  "description": "A silly Discord bot named after my cat.",
   "license": "MIT",
   "repository": "https://github.com/ChadLefort/pat-bot.git",
   "author": "Chad Lefort",
@@ -41,7 +41,6 @@
     "pm2": "^2.0.18",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
-    "rimraf": "^2.5.4",
     "typescript": "2.0.0",
     "winston": "^2.2.0"
   },
@@ -49,6 +48,8 @@
     "@types/chai": "3.4.30",
     "@types/mocha": "2.2.29",
     "chai": "3.5.0",
+    "mocha": "^3.0.1",
+    "rimraf": "^2.5.4",
     "ts-node": "^1.2.2",
     "tslint": "3.14.0-dev.1"
   },
