Switched to foreman and added deploy scripted.

--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
-    "deploy": "./node_modules/.bin/tsc --pretty && node lib/pm2.js",
+    "deploy": "tsc --pretty && node lib/pm2.js",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
     "start": "node lib/index.js",
+    "start:dev": "nf start -j Procfile-dev",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
     "@types/bluebird": "^3.0.33",
-    "@types/dotenv": "^2.0.18",
     "@types/glob": "^5.0.30",
     "@types/lodash": "^4.14.36",
     "@types/node": "6.0.31",
@@ -35,7 +35,6 @@
     "@types/winston": "0.0.28",
     "bluebird": "^3.4.6",
     "discord.js": "^9.3.0",
-    "dotenv": "^2.0.0",
     "glob": "^7.1.0",
     "lodash": "^4.16.2",
     "pm2": "^2.0.18",
@@ -48,6 +47,7 @@
     "@types/chai": "3.4.30",
     "@types/mocha": "2.2.29",
     "chai": "3.5.0",
+    "foreman": "^2.0.0",
     "mocha": "^3.0.1",
     "rimraf": "^2.5.4",
     "ts-node": "^1.2.2",
