Updated travis file with script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ node_js:
 sudo: false
 script:
   - npm test
-deploy:
-  provider: script
-  script: scripts/deploy.sh
-  on:
-    branch: master
+after_success:
+  - eval "$(ssh-agent -s)"
+  - echo "$DEPLOY_KEY" > deploy_key.pem
+  - chmod 600 deploy_key.pem
+  - ssh-add deploy_key.pem
+  - git remote add deploy $REPO
+  - git push deploy master
