--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - npm test
 after_success:
   - eval "$(ssh-agent -s)"
-  - echo "$DEPLOY_KEY" > deploy_key.pem
+  - echo -e "$DEPLOY_KEY" > deploy_key.pem
   - chmod 600 deploy_key.pem
   - ssh-add deploy_key.pem
   - git remote add deploy $REPO
