--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: node_js
 node_js:
-  - "6.7.0"
+- 6.7.0
 sudo: false
 script:
-  - npm test
+- npm test
 before_install:
-  - openssl aes-256-cbc -K $encrypted_d0a7a59bc9fd_key -iv $encrypted_d0a7a59bc9fd_iv -in pat-bot.enc -out pat-bot -d
+- openssl aes-256-cbc -K $encrypted_4f3be34d217e_key -iv $encrypted_4f3be34d217e_iv
+  -in pat-bot.pem.enc -out pat-bot.pem -d
 after_success:
-  - eval "$(ssh-agent -s)"
-  - chmod 600 .travis/pat-bot
-  - ssh-add .travis/pat-bot
-  - git remote add deploy $REPO
-  - git push deploy
+- eval "$(ssh-agent -s)"
+- chmod 600 .travis/pat-bot.pem
+- ssh-add .travis/pat-bot.pem
+- git remote add deploy $REPO
+- git push deploy
