--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: false
 script:
 - npm test
 before_install:
+- echo -e "Host $SERVER\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - openssl aes-256-cbc -K $encrypted_62da1aba3443_key -iv $encrypted_62da1aba3443_iv
   -in pat-bot.pem.enc -out pat-bot.pem -d
 after_success:
