--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@ node_js:
 sudo: false
 script:
 - npm test
+after_success:
+- git remote add deploy $REPO
+- git push deploy
 before_install:
 - echo -e "Host $SERVER\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- openssl aes-256-cbc -K $encrypted_62da1aba3443_key -iv $encrypted_62da1aba3443_iv
-  -in pat-bot.pem.enc -out pat-bot.pem -d
-after_success:
-- eval "$(ssh-agent -s)"
-- chmod 600 .travis/pat-bot.pem
-- ssh-add .travis/pat-bot.pem
-- git remote add deploy $REPO
-- git push deploy master
+- openssl aes-256-cbc -K $encrypted_62da1aba3443_key -iv $encrypted_62da1aba3443_iv in pat-bot.pem.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
