Updated dev environment and started working on help changes.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai": "3.5.0",
     "foreman": "^2.0.0",
     "mocha": "^3.0.1",
+    "nodemon": "^1.11.0",
     "rimraf": "^2.5.4",
     "ts-node": "^1.2.2",
     "tslint": "3.14.0-dev.1"
