--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,10 +20,14 @@
             "type": "node"
         },
         {
-            "name": "Attach",
+            "name": "ATTACH",
             "type": "node",
             "request": "attach",
-            "port": 5858
+            "port": 5858,
+            "restart": false,
+            "sourceMaps": true,
+            "outDir": "${workspaceRoot}/lib",
+            "localRoot": "${workspaceRoot}/src/"
         }
     ]
 }
