--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,9 @@
   "version": "0.1.0",
   "command": "npm",
   "isShellCommand": true,
-  "args": ["run"],
+  "args": [
+    "run"
+  ],
   "showOutput": "always",
   "tasks": [
     {
@@ -18,6 +20,21 @@
     {
       "taskName": "test",
       "isTestCommand": true
+    },
+    {
+      "taskName": "start"
+    },
+    {
+      "taskName": "start:dev"
+    },
+    {
+      "taskName": "deploy"
+    },
+    {
+      "taskName": "watch"
+    },
+    {
+      "taskName": "watch:test"
     }
   ]
 }
