Added some helper functions and restructed help commands.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,10 +31,12 @@
       "taskName": "deploy"
     },
     {
-      "taskName": "watch"
+      "taskName": "watch",
+      "isWatching": true
     },
     {
-      "taskName": "watch:test"
+      "taskName": "watch:test",
+      "isWatching": true
     }
   ]
 }
