--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "@types/aws-sdk": "0.0.38",
     "@types/bluebird": "^3.0.33",
     "@types/glob": "^5.0.30",
     "@types/lodash": "^4.14.36",
@@ -33,6 +34,7 @@
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
     "@types/winston": "0.0.28",
+    "aws-sdk": "^2.6.10",
     "bluebird": "^3.4.6",
     "discord.js": "^9.3.0",
     "glob": "^7.1.0",
