--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pat-bot",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A silly Discord bot named after my cat.",
   "license": "MIT",
   "repository": "https://github.com/ChadLefort/pat-bot.git",
@@ -30,6 +30,7 @@
     "@types/bluebird": "^3.0.33",
     "@types/glob": "^5.0.30",
     "@types/lodash": "^4.14.36",
+    "@types/moment": "^2.13.0",
     "@types/node": "6.0.31",
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
@@ -39,6 +40,7 @@
     "discord.js": "^9.3.0",
     "glob": "^7.1.0",
     "lodash": "^4.16.2",
+    "moment": "^2.15.1",
     "pm2": "^2.0.18",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
