--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "start": "node lib/index.js",
     "start:dev": "nf start -j Procfile-dev",
     "watch": "npm run build -- --watch",
-    "watch:test": "npm run test -- --watch"
+    "watch:test": "npm run test -- --watch",
+    "preversion": "npm run test",
+    "version": "",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "@types/aws-sdk": "0.0.38",
@@ -45,7 +48,9 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "typescript": "2.0.0",
-    "winston": "^2.2.0"
+    "wikijs": "^1.0.0",
+    "winston": "^2.2.0",
+    "youtube-node": "^1.3.0"
   },
   "devDependencies": {
     "@types/chai": "3.4.30",
@@ -59,6 +64,6 @@
     "tslint": "3.14.0-dev.1"
   },
   "engines": {
-    "node": "6.7.0"
+    "node": "6.9.1"
   }
 }
