--- a/package.json
+++ b/package.json
@@ -28,28 +28,31 @@
   },
   "dependencies": {
     "@types/aws-sdk": "0.0.38",
-    "@types/body-parser": "0.0.33",
     "@types/bluebird": "^3.0.33",
+    "@types/body-parser": "0.0.33",
     "@types/consolidate": "0.0.30",
     "@types/express": "^4.0.33",
     "@types/express-serve-static-core": "^4.0.37",
     "@types/glob": "^5.0.30",
+    "@types/history": "^2.0.39",
     "@types/http-status": "^0.2.29",
     "@types/lodash": "^4.14.36",
     "@types/node": "6.0.31",
     "@types/react": "^0.14.41",
     "@types/react-bootstrap": "0.0.33",
     "@types/react-dom": "^0.14.18",
+    "@types/react-router": "^2.0.38",
+    "@types/react-router-bootstrap": "0.0.27",
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
     "@types/serve-static": "^1.7.31",
     "@types/winston": "0.0.28",
     "awesome-typescript-loader": "^2.2.4",
     "aws-sdk": "^2.6.10",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bootstrap-loader": "^2.0.0-beta.12",
     "bootstrap-sass": "^3.3.7",
-    "bluebird": "^3.4.6",
     "consolidate": "^0.14.1",
     "css-loader": "^0.25.0",
     "discord.js": "^9.3.0",
@@ -67,6 +70,8 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
+    "react-router-bootstrap": "^0.23.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "resolve-url-loader": "^1.6.0",
