--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/aws-sdk": "0.0.38",
+    "@types/axios": "^0.9.33",
     "@types/bluebird": "^3.0.33",
     "@types/body-parser": "0.0.33",
     "@types/consolidate": "0.0.30",
@@ -41,14 +42,20 @@
     "@types/react": "^0.14.41",
     "@types/react-bootstrap": "0.0.33",
     "@types/react-dom": "^0.14.18",
+    "@types/react-redux": "^4.4.32",
     "@types/react-router": "^2.0.38",
     "@types/react-router-bootstrap": "0.0.27",
+    "@types/redux": "^3.6.31",
+    "@types/redux-logger": "^2.6.32",
+    "@types/redux-promise-middleware": "0.0.4",
+    "@types/redux-thunk": "^2.1.31",
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
     "@types/serve-static": "^1.7.31",
     "@types/winston": "0.0.28",
     "awesome-typescript-loader": "^2.2.4",
     "aws-sdk": "^2.6.10",
+    "axios": "^0.15.2",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bootstrap-loader": "^2.0.0-beta.12",
@@ -70,8 +77,13 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise-middleware": "^4.1.0",
+    "redux-thunk": "^2.1.0",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "resolve-url-loader": "^1.6.0",
