--- a/package.json
+++ b/package.json
@@ -42,13 +42,8 @@
     "@types/react": "^0.14.41",
     "@types/react-bootstrap": "0.0.33",
     "@types/react-dom": "^0.14.18",
-    "@types/react-redux": "^4.4.32",
     "@types/react-router": "^2.0.38",
     "@types/react-router-bootstrap": "0.0.27",
-    "@types/redux": "^3.6.31",
-    "@types/redux-logger": "^2.6.32",
-    "@types/redux-promise-middleware": "0.0.4",
-    "@types/redux-thunk": "^2.1.31",
     "@types/request": "0.0.31",
     "@types/request-promise": "^3.0.32",
     "@types/serve-static": "^1.7.31",
@@ -70,6 +65,8 @@
     "handlebars": "^4.0.5",
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
+    "mobx": "^2.6.0",
+    "mobx-react": "^3.5.8",
     "moment": "^2.15.1",
     "ncp": "^2.0.0",
     "node-sass": "^3.10.1",
@@ -77,13 +74,8 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
-    "redux-promise-middleware": "^4.1.0",
-    "redux-thunk": "^2.1.0",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "resolve-url-loader": "^1.6.0",
@@ -101,6 +93,7 @@
     "@types/mocha": "2.2.29",
     "chai": "^3.5.0",
     "foreman": "^2.0.0",
+    "mobx-react-devtools": "^4.2.9",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.6",
