--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "clean": "rimraf lib",
     "deploy": "tsc --pretty && webpack --config ./webpack/webpack.prod.config.js && npm run views && node lib/bot/pm2.js",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
+    "assets": "ncp src/web/assets lib/web/public/assets",
     "views": "mkdirp lib/web/server/views && ncp src/web/server/views lib/web/server/views",
-    "build": "npm run clean && npm run lint && webpack --config ./webpack/webpack.config.js && npm run views && echo Using TypeScript && tsc --version && tsc --pretty",
+    "build": "npm run clean && npm run lint && webpack --config ./webpack/webpack.config.js && npm run assets & npm run views && echo Using TypeScript && tsc --version && tsc --pretty",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
     "develop": "nf start -j Procfile-dev",
     "watch": "npm run build -- --watch",
@@ -44,6 +45,7 @@
     "@types/react-dom": "^0.14.18",
     "@types/react-router": "^2.0.38",
     "@types/react-router-bootstrap": "0.0.27",
+    "@types/serve-favicon": "^2.2.28",
     "@types/serve-static": "^1.7.31",
     "@types/winston": "0.0.28",
     "awesome-typescript-loader": "^2.2.4",
@@ -76,6 +78,7 @@
     "react-router-bootstrap": "^0.23.1",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
+    "serve-favicon": "^2.3.0",
     "style-loader": "^0.13.1",
     "typescript": "^2.0.3",
     "url-loader": "^0.5.7",
