--- a/.bootstraprc
+++ b/.bootstraprc
@@ -48,57 +48,7 @@ preBootstrapCustomizations: ./src/web/client/styles/main.scss
 
 
 ### Bootstrap styles
-styles:
-
-  # Mixins
-  mixins: true
-
-  # Reset and dependencies
-  normalize: true
-  print: true
-  glyphicons: false
-
-  # Core CSS
-  scaffolding: true
-  type: true
-  code: true
-  grid: true
-  tables: true
-  forms: true
-  buttons: true
-
-  # Components
-  component-animations: true
-  dropdowns: true
-  button-groups: true
-  input-groups: true
-  navs: true
-  navbar: true
-  breadcrumbs: true
-  pagination: true
-  pager: true
-  labels: true
-  badges: true
-  jumbotron: true
-  thumbnails: true
-  alerts: true
-  progress-bars: true
-  media: true
-  list-group: true
-  panels: true
-  wells: true
-  responsive-embed: true
-  close: true
-
-  # Components w/ JavaScript
-  modals: false
-  tooltip: false
-  popovers: false
-  carousel: false
-
-  # Utility classes
-  utilities: false
-  responsive-utilities: false
+styles: true
 
 ### Bootstrap scripts
 scripts: false
