Updated some packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pat-bot",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A silly Discord bot named after my cat.",
   "license": "MIT",
   "repository": "https://github.com/ChadLefort/pat-bot.git",
@@ -49,7 +49,7 @@
     "@types/serve-favicon": "^2.2.28",
     "@types/serve-static": "^1.7.31",
     "@types/winston": "0.0.28",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "aws-sdk": "^2.6.10",
     "axios": "^0.15.2",
     "bluebird": "^3.4.6",
@@ -58,7 +58,7 @@
     "bootstrap-sass": "^3.3.7",
     "consolidate": "^0.14.1",
     "css-loader": "^0.25.0",
-    "discord.js": "^9.3.0",
+    "discord.js": "^11.0.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "giuseppe": "^1.2.0",
@@ -81,7 +81,7 @@
     "sass-loader": "^4.0.2",
     "serve-favicon": "^2.3.0",
     "style-loader": "^0.13.1",
-    "typescript": "^2.0.3",
+    "typescript": "^2.1.5",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "wikijs": "^1.0.0",
